<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/welcome"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        android:text="@string/select"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/but_twelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/twelve_hours_system"
        android:background="@drawable/orange_ripple"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/but_twenty_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/twenty_four_hours_system"
        android:background="@drawable/green_ripple"
        android:textColor="@android:color/white"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/clock"
        android:layout_marginTop="16dp"/>

</LinearLayout>