<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwentyFourHour"
    android:orientation="vertical"
    android:background="@color/color24">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:text="@string/twelve_hours_system"
        android:layout_marginTop="24dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="center"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:text="@string/start_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/start_hour_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:inputType="number"
            android:backgroundTint="@android:color/white"
            android:maxLength="2"
            android:maxLines="1"
            android:gravity="right"
            android:layout_marginRight="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text=":"/>
        <EditText
            android:id="@+id/start_minute_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:inputType="number"
            android:backgroundTint="@android:color/white"
            android:maxLength="2"
            android:maxLines="1"
            android:gravity="left"
            android:layout_marginLeft="3dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="center"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:text="@string/end_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/end_hour_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:inputType="number"
            android:backgroundTint="@android:color/white"
            android:maxLength="2"
            android:maxLines="1"
            android:gravity="right"
            android:layout_marginRight="3dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:text=":"/>
        <EditText
            android:id="@+id/end_minute_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:inputType="number"
            android:backgroundTint="@android:color/white"
            android:maxLength="2"
            android:maxLines="1"
            android:gravity="left"
            android:layout_marginLeft="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            android:text="@string/deduct_hour"
            android:gravity="right"/>
        <EditText
            android:id="@+id/deduct_hour_24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:inputType="numberDecimal"
            android:backgroundTint="@android:color/white"
            android:maxLines="1"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:text="0"/>
    </LinearLayout>

    <Button
        android:id="@+id/calculate_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:text="@string/calculate"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/yellow_ripple"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/total_hour"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/display_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="?android:textAppearanceLarge"
        tools:text="0"/>

</LinearLayout>